# allocator

./: CMakeLists.txt  README.md  decodeless_allocator-config.cmake
include/decodeless/: allocator.hpp  allocator_concepts.hpp  allocator_construction.hpp  pmr_allocator.hpp
test/: CMakeLists.txt
test/src/: allocator.cpp
